// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SearchFeedFilters - Mobile Snapshots > matches full-text sidebar filters snapshot on a mobile viewport 1`] = `
<div>
  <div
    class="flex flex-col gap-6"
    data-testid="container"
  >
    <div
      class="sticky top-[100px] flex w-full flex-col gap-6 self-start"
      data-testid="container"
    >
      <div
        class="w-full flex-col flex m-0 min-w-0 gap-2 bg-background p-0"
        data-slot="filter-root"
        data-testid="filter-root"
      >
        <div
          class="m-0 gap-2 p-0"
          data-slot="filter-header"
          data-testid="filter-header"
          id="radix-normalized"
        >
          <h2
            class="text-2xl font-light text-muted-foreground"
            data-testid="heading-2"
          >
            Layout
          </h2>
        </div>
        <div
          aria-labelledby="radix-normalized"
          class=""
          data-cy="filter-layout-radiogroup"
          data-testid="filter-layout-radiogroup"
          role="radiogroup"
        >
          <div
            class="mx-auto w-full flex-col flex"
            data-slot="filter-list"
            data-testid="filter-list"
          >
            <button
              aria-checked="true"
              aria-label="Columns"
              aria-pressed="true"
              class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left items-center justify-normal text-foreground m-0 h-full px-0 py-1"
              data-cy="columns-layout-toggle"
              data-selected="true"
              data-slot="filter-item"
              data-testid="filter-item"
              role="radio"
              tabindex="0"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-columns3 lucide-columns-3 h-5 w-5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  height="18"
                  rx="2"
                  width="18"
                  x="3"
                  y="3"
                />
                <path
                  d="M9 3v18"
                />
                <path
                  d="M15 3v18"
                />
              </svg>
              <span
                class=""
              >
                Columns
              </span>
            </button>
            <button
              aria-checked="false"
              aria-label="Wide"
              aria-pressed="false"
              class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left items-center justify-normal text-muted-foreground hover:text-foreground/80 m-0 h-full px-0 py-1"
              data-cy="wide-layout-toggle"
              data-selected="false"
              data-slot="filter-item"
              data-testid="filter-item"
              role="radio"
              tabindex="-1"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-rows2 lucide-rows-2 h-5 w-5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  height="18"
                  rx="2"
                  width="18"
                  x="3"
                  y="3"
                />
                <path
                  d="M3 12h18"
                />
              </svg>
              <span
                class=""
              >
                Wide
              </span>
            </button>
            <button
              aria-checked="false"
              aria-label="List"
              aria-pressed="false"
              class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left items-center justify-normal text-muted-foreground hover:text-foreground/80 m-0 h-full px-0 py-1"
              data-cy="list-layout-toggle"
              data-selected="false"
              data-slot="filter-item"
              data-testid="filter-item"
              role="radio"
              tabindex="-1"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-rows4 lucide-rows-4 h-5 w-5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  height="18"
                  rx="2"
                  width="18"
                  x="3"
                  y="3"
                />
                <path
                  d="M21 7.5H3"
                />
                <path
                  d="M21 12H3"
                />
                <path
                  d="M21 16.5H3"
                />
              </svg>
              <span
                class=""
              >
                List
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        class="w-full flex-col flex m-0 min-w-0 gap-2 bg-background p-0"
        data-slot="filter-root"
        data-testid="filter-root"
      >
        <div
          class="m-0 gap-2 p-0"
          data-slot="filter-header"
          data-testid="filter-header"
          id="radix-normalized"
        >
          <h2
            class="text-2xl font-light text-muted-foreground"
            data-testid="heading-2"
          >
            Content
          </h2>
        </div>
        <div
          aria-labelledby="radix-normalized"
          class=""
          data-testid="filter-content-radiogroup"
          role="radiogroup"
        >
          <div
            class="mx-auto w-full flex-col flex"
            data-slot="filter-list"
            data-testid="filter-list"
          >
            <button
              aria-checked="true"
              aria-label="All"
              aria-pressed="true"
              class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left items-center justify-normal text-foreground m-0 h-full px-0 py-1"
              data-selected="true"
              data-slot="filter-item"
              data-testid="filter-item"
              role="radio"
              tabindex="0"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-layers h-5 w-5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12.83 2.18a2 2 0 0 0-1.66 0L2.6 6.08a1 1 0 0 0 0 1.83l8.58 3.91a2 2 0 0 0 1.66 0l8.58-3.9a1 1 0 0 0 0-1.83z"
                />
                <path
                  d="M2 12a1 1 0 0 0 .58.91l8.6 3.91a2 2 0 0 0 1.65 0l8.58-3.9A1 1 0 0 0 22 12"
                />
                <path
                  d="M2 17a1 1 0 0 0 .58.91l8.6 3.91a2 2 0 0 0 1.65 0l8.58-3.9A1 1 0 0 0 22 17"
                />
              </svg>
              <span
                class=""
              >
                All
              </span>
            </button>
            <button
              aria-checked="false"
              aria-label="Posts"
              aria-pressed="false"
              class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left items-center justify-normal text-muted-foreground hover:text-foreground/80 m-0 h-full px-0 py-1"
              data-selected="false"
              data-slot="filter-item"
              data-testid="filter-item"
              role="radio"
              tabindex="-1"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-sticky-note h-5 w-5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M21 9a2.4 2.4 0 0 0-.706-1.706l-3.588-3.588A2.4 2.4 0 0 0 15 3H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2z"
                />
                <path
                  d="M15 3v5a1 1 0 0 0 1 1h5"
                />
              </svg>
              <span
                class=""
              >
                Posts
              </span>
            </button>
            <button
              aria-checked="false"
              aria-label="Articles"
              aria-pressed="false"
              class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left items-center justify-normal text-muted-foreground hover:text-foreground/80 m-0 h-full px-0 py-1"
              data-selected="false"
              data-slot="filter-item"
              data-testid="filter-item"
              role="radio"
              tabindex="-1"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-newspaper h-5 w-5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M15 18h-5"
                />
                <path
                  d="M18 14h-8"
                />
                <path
                  d="M4 22h16a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2H8a2 2 0 0 0-2 2v16a2 2 0 0 1-4 0v-9a2 2 0 0 1 2-2h2"
                />
                <rect
                  height="4"
                  rx="1"
                  width="8"
                  x="10"
                  y="6"
                />
              </svg>
              <span
                class=""
              >
                Articles
              </span>
            </button>
            <button
              aria-checked="false"
              aria-label="Collections"
              aria-pressed="false"
              class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left items-center justify-normal text-muted-foreground hover:text-foreground/80 m-0 h-full px-0 py-1"
              data-selected="false"
              data-slot="filter-item"
              data-testid="filter-item"
              role="radio"
              tabindex="-1"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-library h-5 w-5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m16 6 4 14"
                />
                <path
                  d="M12 6v14"
                />
                <path
                  d="M8 8v12"
                />
                <path
                  d="M4 4v16"
                />
              </svg>
              <span
                class=""
              >
                Collections
              </span>
            </button>
            <button
              aria-checked="false"
              aria-label="Images"
              aria-pressed="false"
              class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left items-center justify-normal text-muted-foreground hover:text-foreground/80 m-0 h-full px-0 py-1"
              data-selected="false"
              data-slot="filter-item"
              data-testid="filter-item"
              role="radio"
              tabindex="-1"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-image h-5 w-5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  height="18"
                  rx="2"
                  ry="2"
                  width="18"
                  x="3"
                  y="3"
                />
                <circle
                  cx="9"
                  cy="9"
                  r="2"
                />
                <path
                  d="m21 15-3.086-3.086a2 2 0 0 0-2.828 0L6 21"
                />
              </svg>
              <span
                class=""
              >
                Images
              </span>
            </button>
            <button
              aria-checked="false"
              aria-label="Videos"
              aria-pressed="false"
              class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left items-center justify-normal text-muted-foreground hover:text-foreground/80 m-0 h-full px-0 py-1"
              data-selected="false"
              data-slot="filter-item"
              data-testid="filter-item"
              role="radio"
              tabindex="-1"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-circle-play h-5 w-5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M9 9.003a1 1 0 0 1 1.517-.859l4.997 2.997a1 1 0 0 1 0 1.718l-4.997 2.997A1 1 0 0 1 9 14.996z"
                />
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                />
              </svg>
              <span
                class=""
              >
                Videos
              </span>
            </button>
            <button
              aria-checked="false"
              aria-label="Links"
              aria-pressed="false"
              class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left items-center justify-normal text-muted-foreground hover:text-foreground/80 m-0 h-full px-0 py-1"
              data-selected="false"
              data-slot="filter-item"
              data-testid="filter-item"
              role="radio"
              tabindex="-1"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-link h-5 w-5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M10 13a5 5 0 0 0 7.54.54l3-3a5 5 0 0 0-7.07-7.07l-1.72 1.71"
                />
                <path
                  d="M14 11a5 5 0 0 0-7.54-.54l-3 3a5 5 0 0 0 7.07 7.07l1.71-1.71"
                />
              </svg>
              <span
                class=""
              >
                Links
              </span>
            </button>
            <button
              aria-checked="false"
              aria-label="Files"
              aria-pressed="false"
              class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left items-center justify-normal text-muted-foreground hover:text-foreground/80 m-0 h-full px-0 py-1"
              data-selected="false"
              data-slot="filter-item"
              data-testid="filter-item"
              role="radio"
              tabindex="-1"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-download h-5 w-5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 15V3"
                />
                <path
                  d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"
                />
                <path
                  d="m7 10 5 5 5-5"
                />
              </svg>
              <span
                class=""
              >
                Files
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SearchFeedFilters - Snapshots > matches full-text drawer filters snapshot 1`] = `
<div>
  <div
    class="flex flex-col gap-6"
    data-testid="container"
  >
    <div
      class="w-full flex-col flex m-0 min-w-0 gap-2 bg-background p-0"
      data-slot="filter-root"
      data-testid="filter-root"
    >
      <div
        class="m-0 gap-2 p-0"
        data-slot="filter-header"
        data-testid="filter-header"
        id="radix-normalized"
      >
        <h2
          class="text-2xl font-light text-muted-foreground"
          data-testid="heading-2"
        >
          Layout
        </h2>
      </div>
      <div
        aria-labelledby="radix-normalized"
        class=""
        data-cy="filter-layout-radiogroup"
        data-testid="filter-layout-radiogroup"
        role="radiogroup"
      >
        <div
          class="mx-auto w-full flex-col flex"
          data-slot="filter-list"
          data-testid="filter-list"
        >
          <button
            aria-checked="true"
            aria-label="Columns"
            aria-pressed="true"
            class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left items-center justify-normal text-foreground m-0 h-full px-0 py-1"
            data-cy="columns-layout-toggle"
            data-selected="true"
            data-slot="filter-item"
            data-testid="filter-item"
            role="radio"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-columns3 lucide-columns-3 h-5 w-5"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="18"
                rx="2"
                width="18"
                x="3"
                y="3"
              />
              <path
                d="M9 3v18"
              />
              <path
                d="M15 3v18"
              />
            </svg>
            <span
              class=""
            >
              Columns
            </span>
          </button>
          <button
            aria-checked="false"
            aria-label="Wide"
            aria-pressed="false"
            class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left items-center justify-normal text-muted-foreground hover:text-foreground/80 m-0 h-full px-0 py-1"
            data-cy="wide-layout-toggle"
            data-selected="false"
            data-slot="filter-item"
            data-testid="filter-item"
            role="radio"
            tabindex="-1"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-rows2 lucide-rows-2 h-5 w-5"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="18"
                rx="2"
                width="18"
                x="3"
                y="3"
              />
              <path
                d="M3 12h18"
              />
            </svg>
            <span
              class=""
            >
              Wide
            </span>
          </button>
          <button
            aria-checked="false"
            aria-label="List"
            aria-pressed="false"
            class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left items-center justify-normal text-muted-foreground hover:text-foreground/80 m-0 h-full px-0 py-1"
            data-cy="list-layout-toggle"
            data-selected="false"
            data-slot="filter-item"
            data-testid="filter-item"
            role="radio"
            tabindex="-1"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-rows4 lucide-rows-4 h-5 w-5"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="18"
                rx="2"
                width="18"
                x="3"
                y="3"
              />
              <path
                d="M21 7.5H3"
              />
              <path
                d="M21 12H3"
              />
              <path
                d="M21 16.5H3"
              />
            </svg>
            <span
              class=""
            >
              List
            </span>
          </button>
          <button
            aria-checked="false"
            aria-label="Visual"
            aria-pressed="false"
            class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left items-center justify-normal text-muted-foreground hover:text-foreground/80 m-0 h-full px-0 py-1"
            data-cy="visual-layout-toggle"
            data-selected="false"
            data-slot="filter-item"
            data-testid="filter-item"
            role="radio"
            tabindex="-1"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-layout-grid h-5 w-5"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="7"
                rx="1"
                width="7"
                x="3"
                y="3"
              />
              <rect
                height="7"
                rx="1"
                width="7"
                x="14"
                y="3"
              />
              <rect
                height="7"
                rx="1"
                width="7"
                x="14"
                y="14"
              />
              <rect
                height="7"
                rx="1"
                width="7"
                x="3"
                y="14"
              />
            </svg>
            <span
              class=""
            >
              Visual
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="w-full flex-col flex m-0 min-w-0 gap-2 bg-background p-0"
      data-slot="filter-root"
      data-testid="filter-root"
    >
      <div
        class="m-0 gap-2 p-0"
        data-slot="filter-header"
        data-testid="filter-header"
        id="radix-normalized"
      >
        <h2
          class="text-2xl font-light text-muted-foreground"
          data-testid="heading-2"
        >
          Content
        </h2>
      </div>
      <div
        aria-labelledby="radix-normalized"
        class=""
        data-testid="filter-content-radiogroup"
        role="radiogroup"
      >
        <div
          class="mx-auto w-full flex-col flex"
          data-slot="filter-list"
          data-testid="filter-list"
        >
          <button
            aria-checked="true"
            aria-label="All"
            aria-pressed="true"
            class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left items-center justify-normal text-foreground m-0 h-full px-0 py-1"
            data-selected="true"
            data-slot="filter-item"
            data-testid="filter-item"
            role="radio"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-layers h-5 w-5"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.83 2.18a2 2 0 0 0-1.66 0L2.6 6.08a1 1 0 0 0 0 1.83l8.58 3.91a2 2 0 0 0 1.66 0l8.58-3.9a1 1 0 0 0 0-1.83z"
              />
              <path
                d="M2 12a1 1 0 0 0 .58.91l8.6 3.91a2 2 0 0 0 1.65 0l8.58-3.9A1 1 0 0 0 22 12"
              />
              <path
                d="M2 17a1 1 0 0 0 .58.91l8.6 3.91a2 2 0 0 0 1.65 0l8.58-3.9A1 1 0 0 0 22 17"
              />
            </svg>
            <span
              class=""
            >
              All
            </span>
          </button>
          <button
            aria-checked="false"
            aria-label="Posts"
            aria-pressed="false"
            class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left items-center justify-normal text-muted-foreground hover:text-foreground/80 m-0 h-full px-0 py-1"
            data-selected="false"
            data-slot="filter-item"
            data-testid="filter-item"
            role="radio"
            tabindex="-1"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-sticky-note h-5 w-5"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M21 9a2.4 2.4 0 0 0-.706-1.706l-3.588-3.588A2.4 2.4 0 0 0 15 3H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2z"
              />
              <path
                d="M15 3v5a1 1 0 0 0 1 1h5"
              />
            </svg>
            <span
              class=""
            >
              Posts
            </span>
          </button>
          <button
            aria-checked="false"
            aria-label="Articles"
            aria-pressed="false"
            class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left items-center justify-normal text-muted-foreground hover:text-foreground/80 m-0 h-full px-0 py-1"
            data-selected="false"
            data-slot="filter-item"
            data-testid="filter-item"
            role="radio"
            tabindex="-1"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-newspaper h-5 w-5"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15 18h-5"
              />
              <path
                d="M18 14h-8"
              />
              <path
                d="M4 22h16a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2H8a2 2 0 0 0-2 2v16a2 2 0 0 1-4 0v-9a2 2 0 0 1 2-2h2"
              />
              <rect
                height="4"
                rx="1"
                width="8"
                x="10"
                y="6"
              />
            </svg>
            <span
              class=""
            >
              Articles
            </span>
          </button>
          <button
            aria-checked="false"
            aria-label="Collections"
            aria-pressed="false"
            class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left items-center justify-normal text-muted-foreground hover:text-foreground/80 m-0 h-full px-0 py-1"
            data-selected="false"
            data-slot="filter-item"
            data-testid="filter-item"
            role="radio"
            tabindex="-1"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-library h-5 w-5"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m16 6 4 14"
              />
              <path
                d="M12 6v14"
              />
              <path
                d="M8 8v12"
              />
              <path
                d="M4 4v16"
              />
            </svg>
            <span
              class=""
            >
              Collections
            </span>
          </button>
          <button
            aria-checked="false"
            aria-label="Images"
            aria-pressed="false"
            class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left items-center justify-normal text-muted-foreground hover:text-foreground/80 m-0 h-full px-0 py-1"
            data-selected="false"
            data-slot="filter-item"
            data-testid="filter-item"
            role="radio"
            tabindex="-1"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-image h-5 w-5"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="18"
                rx="2"
                ry="2"
                width="18"
                x="3"
                y="3"
              />
              <circle
                cx="9"
                cy="9"
                r="2"
              />
              <path
                d="m21 15-3.086-3.086a2 2 0 0 0-2.828 0L6 21"
              />
            </svg>
            <span
              class=""
            >
              Images
            </span>
          </button>
          <button
            aria-checked="false"
            aria-label="Videos"
            aria-pressed="false"
            class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left items-center justify-normal text-muted-foreground hover:text-foreground/80 m-0 h-full px-0 py-1"
            data-selected="false"
            data-slot="filter-item"
            data-testid="filter-item"
            role="radio"
            tabindex="-1"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-circle-play h-5 w-5"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M9 9.003a1 1 0 0 1 1.517-.859l4.997 2.997a1 1 0 0 1 0 1.718l-4.997 2.997A1 1 0 0 1 9 14.996z"
              />
              <circle
                cx="12"
                cy="12"
                r="10"
              />
            </svg>
            <span
              class=""
            >
              Videos
            </span>
          </button>
          <button
            aria-checked="false"
            aria-label="Links"
            aria-pressed="false"
            class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left items-center justify-normal text-muted-foreground hover:text-foreground/80 m-0 h-full px-0 py-1"
            data-selected="false"
            data-slot="filter-item"
            data-testid="filter-item"
            role="radio"
            tabindex="-1"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-link h-5 w-5"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10 13a5 5 0 0 0 7.54.54l3-3a5 5 0 0 0-7.07-7.07l-1.72 1.71"
              />
              <path
                d="M14 11a5 5 0 0 0-7.54-.54l-3 3a5 5 0 0 0 7.07 7.07l1.71-1.71"
              />
            </svg>
            <span
              class=""
            >
              Links
            </span>
          </button>
          <button
            aria-checked="false"
            aria-label="Files"
            aria-pressed="false"
            class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left items-center justify-normal text-muted-foreground hover:text-foreground/80 m-0 h-full px-0 py-1"
            data-selected="false"
            data-slot="filter-item"
            data-testid="filter-item"
            role="radio"
            tabindex="-1"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-download h-5 w-5"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 15V3"
              />
              <path
                d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"
              />
              <path
                d="m7 10 5 5 5-5"
              />
            </svg>
            <span
              class=""
            >
              Files
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SearchFeedFilters - Snapshots > matches full-text filters snapshot without Sort 1`] = `
<div>
  <div
    class="flex flex-col gap-6"
    data-testid="container"
  >
    <div
      class="sticky top-[100px] flex w-full flex-col gap-6 self-start"
      data-testid="container"
    >
      <div
        class="w-full flex-col flex m-0 min-w-0 gap-2 bg-background p-0"
        data-slot="filter-root"
        data-testid="filter-root"
      >
        <div
          class="m-0 gap-2 p-0"
          data-slot="filter-header"
          data-testid="filter-header"
          id="radix-normalized"
        >
          <h2
            class="text-2xl font-light text-muted-foreground"
            data-testid="heading-2"
          >
            Layout
          </h2>
        </div>
        <div
          aria-labelledby="radix-normalized"
          class=""
          data-cy="filter-layout-radiogroup"
          data-testid="filter-layout-radiogroup"
          role="radiogroup"
        >
          <div
            class="mx-auto w-full flex-col flex"
            data-slot="filter-list"
            data-testid="filter-list"
          >
            <button
              aria-checked="true"
              aria-label="Columns"
              aria-pressed="true"
              class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left items-center justify-normal text-foreground m-0 h-full px-0 py-1"
              data-cy="columns-layout-toggle"
              data-selected="true"
              data-slot="filter-item"
              data-testid="filter-item"
              role="radio"
              tabindex="0"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-columns3 lucide-columns-3 h-5 w-5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  height="18"
                  rx="2"
                  width="18"
                  x="3"
                  y="3"
                />
                <path
                  d="M9 3v18"
                />
                <path
                  d="M15 3v18"
                />
              </svg>
              <span
                class=""
              >
                Columns
              </span>
            </button>
            <button
              aria-checked="false"
              aria-label="Wide"
              aria-pressed="false"
              class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left items-center justify-normal text-muted-foreground hover:text-foreground/80 m-0 h-full px-0 py-1"
              data-cy="wide-layout-toggle"
              data-selected="false"
              data-slot="filter-item"
              data-testid="filter-item"
              role="radio"
              tabindex="-1"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-rows2 lucide-rows-2 h-5 w-5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  height="18"
                  rx="2"
                  width="18"
                  x="3"
                  y="3"
                />
                <path
                  d="M3 12h18"
                />
              </svg>
              <span
                class=""
              >
                Wide
              </span>
            </button>
            <button
              aria-checked="false"
              aria-label="List"
              aria-pressed="false"
              class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left items-center justify-normal text-muted-foreground hover:text-foreground/80 m-0 h-full px-0 py-1"
              data-cy="list-layout-toggle"
              data-selected="false"
              data-slot="filter-item"
              data-testid="filter-item"
              role="radio"
              tabindex="-1"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-rows4 lucide-rows-4 h-5 w-5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  height="18"
                  rx="2"
                  width="18"
                  x="3"
                  y="3"
                />
                <path
                  d="M21 7.5H3"
                />
                <path
                  d="M21 12H3"
                />
                <path
                  d="M21 16.5H3"
                />
              </svg>
              <span
                class=""
              >
                List
              </span>
            </button>
            <button
              aria-checked="false"
              aria-label="Visual"
              aria-pressed="false"
              class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left items-center justify-normal text-muted-foreground hover:text-foreground/80 m-0 h-full px-0 py-1"
              data-cy="visual-layout-toggle"
              data-selected="false"
              data-slot="filter-item"
              data-testid="filter-item"
              role="radio"
              tabindex="-1"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-layout-grid h-5 w-5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  height="7"
                  rx="1"
                  width="7"
                  x="3"
                  y="3"
                />
                <rect
                  height="7"
                  rx="1"
                  width="7"
                  x="14"
                  y="3"
                />
                <rect
                  height="7"
                  rx="1"
                  width="7"
                  x="14"
                  y="14"
                />
                <rect
                  height="7"
                  rx="1"
                  width="7"
                  x="3"
                  y="14"
                />
              </svg>
              <span
                class=""
              >
                Visual
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        class="w-full flex-col flex m-0 min-w-0 gap-2 bg-background p-0"
        data-slot="filter-root"
        data-testid="filter-root"
      >
        <div
          class="m-0 gap-2 p-0"
          data-slot="filter-header"
          data-testid="filter-header"
          id="radix-normalized"
        >
          <h2
            class="text-2xl font-light text-muted-foreground"
            data-testid="heading-2"
          >
            Content
          </h2>
        </div>
        <div
          aria-labelledby="radix-normalized"
          class=""
          data-testid="filter-content-radiogroup"
          role="radiogroup"
        >
          <div
            class="mx-auto w-full flex-col flex"
            data-slot="filter-list"
            data-testid="filter-list"
          >
            <button
              aria-checked="true"
              aria-label="All"
              aria-pressed="true"
              class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left items-center justify-normal text-foreground m-0 h-full px-0 py-1"
              data-selected="true"
              data-slot="filter-item"
              data-testid="filter-item"
              role="radio"
              tabindex="0"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-layers h-5 w-5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12.83 2.18a2 2 0 0 0-1.66 0L2.6 6.08a1 1 0 0 0 0 1.83l8.58 3.91a2 2 0 0 0 1.66 0l8.58-3.9a1 1 0 0 0 0-1.83z"
                />
                <path
                  d="M2 12a1 1 0 0 0 .58.91l8.6 3.91a2 2 0 0 0 1.65 0l8.58-3.9A1 1 0 0 0 22 12"
                />
                <path
                  d="M2 17a1 1 0 0 0 .58.91l8.6 3.91a2 2 0 0 0 1.65 0l8.58-3.9A1 1 0 0 0 22 17"
                />
              </svg>
              <span
                class=""
              >
                All
              </span>
            </button>
            <button
              aria-checked="false"
              aria-label="Posts"
              aria-pressed="false"
              class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left items-center justify-normal text-muted-foreground hover:text-foreground/80 m-0 h-full px-0 py-1"
              data-selected="false"
              data-slot="filter-item"
              data-testid="filter-item"
              role="radio"
              tabindex="-1"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-sticky-note h-5 w-5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M21 9a2.4 2.4 0 0 0-.706-1.706l-3.588-3.588A2.4 2.4 0 0 0 15 3H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2z"
                />
                <path
                  d="M15 3v5a1 1 0 0 0 1 1h5"
                />
              </svg>
              <span
                class=""
              >
                Posts
              </span>
            </button>
            <button
              aria-checked="false"
              aria-label="Articles"
              aria-pressed="false"
              class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left items-center justify-normal text-muted-foreground hover:text-foreground/80 m-0 h-full px-0 py-1"
              data-selected="false"
              data-slot="filter-item"
              data-testid="filter-item"
              role="radio"
              tabindex="-1"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-newspaper h-5 w-5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M15 18h-5"
                />
                <path
                  d="M18 14h-8"
                />
                <path
                  d="M4 22h16a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2H8a2 2 0 0 0-2 2v16a2 2 0 0 1-4 0v-9a2 2 0 0 1 2-2h2"
                />
                <rect
                  height="4"
                  rx="1"
                  width="8"
                  x="10"
                  y="6"
                />
              </svg>
              <span
                class=""
              >
                Articles
              </span>
            </button>
            <button
              aria-checked="false"
              aria-label="Collections"
              aria-pressed="false"
              class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left items-center justify-normal text-muted-foreground hover:text-foreground/80 m-0 h-full px-0 py-1"
              data-selected="false"
              data-slot="filter-item"
              data-testid="filter-item"
              role="radio"
              tabindex="-1"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-library h-5 w-5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m16 6 4 14"
                />
                <path
                  d="M12 6v14"
                />
                <path
                  d="M8 8v12"
                />
                <path
                  d="M4 4v16"
                />
              </svg>
              <span
                class=""
              >
                Collections
              </span>
            </button>
            <button
              aria-checked="false"
              aria-label="Images"
              aria-pressed="false"
              class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left items-center justify-normal text-muted-foreground hover:text-foreground/80 m-0 h-full px-0 py-1"
              data-selected="false"
              data-slot="filter-item"
              data-testid="filter-item"
              role="radio"
              tabindex="-1"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-image h-5 w-5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  height="18"
                  rx="2"
                  ry="2"
                  width="18"
                  x="3"
                  y="3"
                />
                <circle
                  cx="9"
                  cy="9"
                  r="2"
                />
                <path
                  d="m21 15-3.086-3.086a2 2 0 0 0-2.828 0L6 21"
                />
              </svg>
              <span
                class=""
              >
                Images
              </span>
            </button>
            <button
              aria-checked="false"
              aria-label="Videos"
              aria-pressed="false"
              class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left items-center justify-normal text-muted-foreground hover:text-foreground/80 m-0 h-full px-0 py-1"
              data-selected="false"
              data-slot="filter-item"
              data-testid="filter-item"
              role="radio"
              tabindex="-1"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-circle-play h-5 w-5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M9 9.003a1 1 0 0 1 1.517-.859l4.997 2.997a1 1 0 0 1 0 1.718l-4.997 2.997A1 1 0 0 1 9 14.996z"
                />
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                />
              </svg>
              <span
                class=""
              >
                Videos
              </span>
            </button>
            <button
              aria-checked="false"
              aria-label="Links"
              aria-pressed="false"
              class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left items-center justify-normal text-muted-foreground hover:text-foreground/80 m-0 h-full px-0 py-1"
              data-selected="false"
              data-slot="filter-item"
              data-testid="filter-item"
              role="radio"
              tabindex="-1"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-link h-5 w-5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M10 13a5 5 0 0 0 7.54.54l3-3a5 5 0 0 0-7.07-7.07l-1.72 1.71"
                />
                <path
                  d="M14 11a5 5 0 0 0-7.54-.54l-3 3a5 5 0 0 0 7.07 7.07l1.71-1.71"
                />
              </svg>
              <span
                class=""
              >
                Links
              </span>
            </button>
            <button
              aria-checked="false"
              aria-label="Files"
              aria-pressed="false"
              class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left items-center justify-normal text-muted-foreground hover:text-foreground/80 m-0 h-full px-0 py-1"
              data-selected="false"
              data-slot="filter-item"
              data-testid="filter-item"
              role="radio"
              tabindex="-1"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-download h-5 w-5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 15V3"
                />
                <path
                  d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"
                />
                <path
                  d="m7 10 5 5 5-5"
                />
              </svg>
              <span
                class=""
              >
                Files
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SearchFeedFilters - Snapshots > matches full-text mobile-shell filters snapshot 1`] = `
<div>
  <div
    class="flex flex-col gap-6"
    data-testid="container"
  >
    <div
      class="w-full flex-col flex m-0 min-w-0 gap-2 bg-background p-0"
      data-slot="filter-root"
      data-testid="filter-root"
    >
      <div
        class="m-0 gap-2 p-0"
        data-slot="filter-header"
        data-testid="filter-header"
        id="radix-normalized"
      >
        <h2
          class="text-2xl font-light text-muted-foreground"
          data-testid="heading-2"
        >
          Content
        </h2>
      </div>
      <div
        aria-labelledby="radix-normalized"
        class=""
        data-testid="filter-content-radiogroup"
        role="radiogroup"
      >
        <div
          class="mx-auto w-full flex-col flex"
          data-slot="filter-list"
          data-testid="filter-list"
        >
          <button
            aria-checked="true"
            aria-label="All"
            aria-pressed="true"
            class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left items-center justify-normal text-foreground m-0 h-full px-0 py-1"
            data-selected="true"
            data-slot="filter-item"
            data-testid="filter-item"
            role="radio"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-layers h-5 w-5"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.83 2.18a2 2 0 0 0-1.66 0L2.6 6.08a1 1 0 0 0 0 1.83l8.58 3.91a2 2 0 0 0 1.66 0l8.58-3.9a1 1 0 0 0 0-1.83z"
              />
              <path
                d="M2 12a1 1 0 0 0 .58.91l8.6 3.91a2 2 0 0 0 1.65 0l8.58-3.9A1 1 0 0 0 22 12"
              />
              <path
                d="M2 17a1 1 0 0 0 .58.91l8.6 3.91a2 2 0 0 0 1.65 0l8.58-3.9A1 1 0 0 0 22 17"
              />
            </svg>
            <span
              class=""
            >
              All
            </span>
          </button>
          <button
            aria-checked="false"
            aria-label="Posts"
            aria-pressed="false"
            class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left items-center justify-normal text-muted-foreground hover:text-foreground/80 m-0 h-full px-0 py-1"
            data-selected="false"
            data-slot="filter-item"
            data-testid="filter-item"
            role="radio"
            tabindex="-1"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-sticky-note h-5 w-5"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M21 9a2.4 2.4 0 0 0-.706-1.706l-3.588-3.588A2.4 2.4 0 0 0 15 3H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2z"
              />
              <path
                d="M15 3v5a1 1 0 0 0 1 1h5"
              />
            </svg>
            <span
              class=""
            >
              Posts
            </span>
          </button>
          <button
            aria-checked="false"
            aria-label="Articles"
            aria-pressed="false"
            class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left items-center justify-normal text-muted-foreground hover:text-foreground/80 m-0 h-full px-0 py-1"
            data-selected="false"
            data-slot="filter-item"
            data-testid="filter-item"
            role="radio"
            tabindex="-1"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-newspaper h-5 w-5"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15 18h-5"
              />
              <path
                d="M18 14h-8"
              />
              <path
                d="M4 22h16a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2H8a2 2 0 0 0-2 2v16a2 2 0 0 1-4 0v-9a2 2 0 0 1 2-2h2"
              />
              <rect
                height="4"
                rx="1"
                width="8"
                x="10"
                y="6"
              />
            </svg>
            <span
              class=""
            >
              Articles
            </span>
          </button>
          <button
            aria-checked="false"
            aria-label="Collections"
            aria-pressed="false"
            class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left items-center justify-normal text-muted-foreground hover:text-foreground/80 m-0 h-full px-0 py-1"
            data-selected="false"
            data-slot="filter-item"
            data-testid="filter-item"
            role="radio"
            tabindex="-1"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-library h-5 w-5"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m16 6 4 14"
              />
              <path
                d="M12 6v14"
              />
              <path
                d="M8 8v12"
              />
              <path
                d="M4 4v16"
              />
            </svg>
            <span
              class=""
            >
              Collections
            </span>
          </button>
          <button
            aria-checked="false"
            aria-label="Images"
            aria-pressed="false"
            class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left items-center justify-normal text-muted-foreground hover:text-foreground/80 m-0 h-full px-0 py-1"
            data-selected="false"
            data-slot="filter-item"
            data-testid="filter-item"
            role="radio"
            tabindex="-1"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-image h-5 w-5"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="18"
                rx="2"
                ry="2"
                width="18"
                x="3"
                y="3"
              />
              <circle
                cx="9"
                cy="9"
                r="2"
              />
              <path
                d="m21 15-3.086-3.086a2 2 0 0 0-2.828 0L6 21"
              />
            </svg>
            <span
              class=""
            >
              Images
            </span>
          </button>
          <button
            aria-checked="false"
            aria-label="Videos"
            aria-pressed="false"
            class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left items-center justify-normal text-muted-foreground hover:text-foreground/80 m-0 h-full px-0 py-1"
            data-selected="false"
            data-slot="filter-item"
            data-testid="filter-item"
            role="radio"
            tabindex="-1"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-circle-play h-5 w-5"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M9 9.003a1 1 0 0 1 1.517-.859l4.997 2.997a1 1 0 0 1 0 1.718l-4.997 2.997A1 1 0 0 1 9 14.996z"
              />
              <circle
                cx="12"
                cy="12"
                r="10"
              />
            </svg>
            <span
              class=""
            >
              Videos
            </span>
          </button>
          <button
            aria-checked="false"
            aria-label="Links"
            aria-pressed="false"
            class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left items-center justify-normal text-muted-foreground hover:text-foreground/80 m-0 h-full px-0 py-1"
            data-selected="false"
            data-slot="filter-item"
            data-testid="filter-item"
            role="radio"
            tabindex="-1"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-link h-5 w-5"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10 13a5 5 0 0 0 7.54.54l3-3a5 5 0 0 0-7.07-7.07l-1.72 1.71"
              />
              <path
                d="M14 11a5 5 0 0 0-7.54-.54l-3 3a5 5 0 0 0 7.07 7.07l1.71-1.71"
              />
            </svg>
            <span
              class=""
            >
              Links
            </span>
          </button>
          <button
            aria-checked="false"
            aria-label="Files"
            aria-pressed="false"
            class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left items-center justify-normal text-muted-foreground hover:text-foreground/80 m-0 h-full px-0 py-1"
            data-selected="false"
            data-slot="filter-item"
            data-testid="filter-item"
            role="radio"
            tabindex="-1"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-download h-5 w-5"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 15V3"
              />
              <path
                d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"
              />
              <path
                d="m7 10 5 5 5-5"
              />
            </svg>
            <span
              class=""
            >
              Files
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SearchFeedFilters - Snapshots > matches tag-search filters snapshot 1`] = `
<div>
  <div
    class="flex flex-col gap-6"
    data-testid="container"
  >
    <div
      class="w-full flex-col flex m-0 min-w-0 gap-2 bg-background p-0"
      data-slot="filter-root"
      data-testid="filter-root"
    >
      <div
        class="m-0 gap-2 p-0"
        data-slot="filter-header"
        data-testid="filter-header"
        id="radix-normalized"
      >
        <h2
          class="text-2xl font-light text-muted-foreground"
          data-testid="heading-2"
        >
          Sort
        </h2>
      </div>
      <div
        aria-labelledby="radix-normalized"
        class=""
        data-cy="filter-sort-radiogroup"
        data-testid="filter-sort-radiogroup"
        role="radiogroup"
      >
        <div
          class="mx-auto w-full flex-col flex"
          data-slot="filter-list"
          data-testid="filter-list"
        >
          <button
            aria-checked="true"
            aria-label="Recent"
            aria-pressed="true"
            class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left items-center justify-normal text-foreground m-0 h-full px-0 py-1"
            data-cy="recent-sort-toggle"
            data-selected="true"
            data-slot="filter-item"
            data-testid="filter-item"
            role="radio"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-square-asterisk h-5 w-5"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="18"
                rx="2"
                width="18"
                x="3"
                y="3"
              />
              <path
                d="M12 8v8"
              />
              <path
                d="m8.5 14 7-4"
              />
              <path
                d="m8.5 10 7 4"
              />
            </svg>
            <span
              class=""
            >
              Recent
            </span>
          </button>
          <button
            aria-checked="false"
            aria-label="Popularity"
            aria-pressed="false"
            class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left items-center justify-normal text-muted-foreground hover:text-foreground/80 m-0 h-full px-0 py-1"
            data-cy="popularity-sort-toggle"
            data-selected="false"
            data-slot="filter-item"
            data-testid="filter-item"
            role="radio"
            tabindex="-1"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-flame h-5 w-5"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 3q1 4 4 6.5t3 5.5a1 1 0 0 1-14 0 5 5 0 0 1 1-3 1 1 0 0 0 5 0c0-2-1.5-3-1.5-5q0-2 2.5-4"
              />
            </svg>
            <span
              class=""
            >
              Popularity
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="sticky top-[100px] flex w-full flex-col gap-6 self-start"
      data-testid="container"
    >
      <div
        class="w-full flex-col flex m-0 min-w-0 gap-2 bg-background p-0"
        data-slot="filter-root"
        data-testid="filter-root"
      >
        <div
          class="m-0 gap-2 p-0"
          data-slot="filter-header"
          data-testid="filter-header"
          id="radix-normalized"
        >
          <h2
            class="text-2xl font-light text-muted-foreground"
            data-testid="heading-2"
          >
            Layout
          </h2>
        </div>
        <div
          aria-labelledby="radix-normalized"
          class=""
          data-cy="filter-layout-radiogroup"
          data-testid="filter-layout-radiogroup"
          role="radiogroup"
        >
          <div
            class="mx-auto w-full flex-col flex"
            data-slot="filter-list"
            data-testid="filter-list"
          >
            <button
              aria-checked="true"
              aria-label="Columns"
              aria-pressed="true"
              class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left items-center justify-normal text-foreground m-0 h-full px-0 py-1"
              data-cy="columns-layout-toggle"
              data-selected="true"
              data-slot="filter-item"
              data-testid="filter-item"
              role="radio"
              tabindex="0"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-columns3 lucide-columns-3 h-5 w-5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  height="18"
                  rx="2"
                  width="18"
                  x="3"
                  y="3"
                />
                <path
                  d="M9 3v18"
                />
                <path
                  d="M15 3v18"
                />
              </svg>
              <span
                class=""
              >
                Columns
              </span>
            </button>
            <button
              aria-checked="false"
              aria-label="Wide"
              aria-pressed="false"
              class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left items-center justify-normal text-muted-foreground hover:text-foreground/80 m-0 h-full px-0 py-1"
              data-cy="wide-layout-toggle"
              data-selected="false"
              data-slot="filter-item"
              data-testid="filter-item"
              role="radio"
              tabindex="-1"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-rows2 lucide-rows-2 h-5 w-5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  height="18"
                  rx="2"
                  width="18"
                  x="3"
                  y="3"
                />
                <path
                  d="M3 12h18"
                />
              </svg>
              <span
                class=""
              >
                Wide
              </span>
            </button>
            <button
              aria-checked="false"
              aria-label="List"
              aria-pressed="false"
              class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left items-center justify-normal text-muted-foreground hover:text-foreground/80 m-0 h-full px-0 py-1"
              data-cy="list-layout-toggle"
              data-selected="false"
              data-slot="filter-item"
              data-testid="filter-item"
              role="radio"
              tabindex="-1"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-rows4 lucide-rows-4 h-5 w-5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  height="18"
                  rx="2"
                  width="18"
                  x="3"
                  y="3"
                />
                <path
                  d="M21 7.5H3"
                />
                <path
                  d="M21 12H3"
                />
                <path
                  d="M21 16.5H3"
                />
              </svg>
              <span
                class=""
              >
                List
              </span>
            </button>
            <button
              aria-checked="false"
              aria-label="Visual"
              aria-pressed="false"
              class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left items-center justify-normal text-muted-foreground hover:text-foreground/80 m-0 h-full px-0 py-1"
              data-cy="visual-layout-toggle"
              data-selected="false"
              data-slot="filter-item"
              data-testid="filter-item"
              role="radio"
              tabindex="-1"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-layout-grid h-5 w-5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  height="7"
                  rx="1"
                  width="7"
                  x="3"
                  y="3"
                />
                <rect
                  height="7"
                  rx="1"
                  width="7"
                  x="14"
                  y="3"
                />
                <rect
                  height="7"
                  rx="1"
                  width="7"
                  x="14"
                  y="14"
                />
                <rect
                  height="7"
                  rx="1"
                  width="7"
                  x="3"
                  y="14"
                />
              </svg>
              <span
                class=""
              >
                Visual
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        class="w-full flex-col flex m-0 min-w-0 gap-2 bg-background p-0"
        data-slot="filter-root"
        data-testid="filter-root"
      >
        <div
          class="m-0 gap-2 p-0"
          data-slot="filter-header"
          data-testid="filter-header"
          id="radix-normalized"
        >
          <h2
            class="text-2xl font-light text-muted-foreground"
            data-testid="heading-2"
          >
            Content
          </h2>
        </div>
        <div
          aria-labelledby="radix-normalized"
          class=""
          data-testid="filter-content-radiogroup"
          role="radiogroup"
        >
          <div
            class="mx-auto w-full flex-col flex"
            data-slot="filter-list"
            data-testid="filter-list"
          >
            <button
              aria-checked="true"
              aria-label="All"
              aria-pressed="true"
              class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left items-center justify-normal text-foreground m-0 h-full px-0 py-1"
              data-selected="true"
              data-slot="filter-item"
              data-testid="filter-item"
              role="radio"
              tabindex="0"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-layers h-5 w-5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12.83 2.18a2 2 0 0 0-1.66 0L2.6 6.08a1 1 0 0 0 0 1.83l8.58 3.91a2 2 0 0 0 1.66 0l8.58-3.9a1 1 0 0 0 0-1.83z"
                />
                <path
                  d="M2 12a1 1 0 0 0 .58.91l8.6 3.91a2 2 0 0 0 1.65 0l8.58-3.9A1 1 0 0 0 22 12"
                />
                <path
                  d="M2 17a1 1 0 0 0 .58.91l8.6 3.91a2 2 0 0 0 1.65 0l8.58-3.9A1 1 0 0 0 22 17"
                />
              </svg>
              <span
                class=""
              >
                All
              </span>
            </button>
            <button
              aria-checked="false"
              aria-label="Posts"
              aria-pressed="false"
              class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left items-center justify-normal text-muted-foreground hover:text-foreground/80 m-0 h-full px-0 py-1"
              data-selected="false"
              data-slot="filter-item"
              data-testid="filter-item"
              role="radio"
              tabindex="-1"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-sticky-note h-5 w-5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M21 9a2.4 2.4 0 0 0-.706-1.706l-3.588-3.588A2.4 2.4 0 0 0 15 3H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2z"
                />
                <path
                  d="M15 3v5a1 1 0 0 0 1 1h5"
                />
              </svg>
              <span
                class=""
              >
                Posts
              </span>
            </button>
            <button
              aria-checked="false"
              aria-label="Articles"
              aria-pressed="false"
              class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left items-center justify-normal text-muted-foreground hover:text-foreground/80 m-0 h-full px-0 py-1"
              data-selected="false"
              data-slot="filter-item"
              data-testid="filter-item"
              role="radio"
              tabindex="-1"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-newspaper h-5 w-5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M15 18h-5"
                />
                <path
                  d="M18 14h-8"
                />
                <path
                  d="M4 22h16a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2H8a2 2 0 0 0-2 2v16a2 2 0 0 1-4 0v-9a2 2 0 0 1 2-2h2"
                />
                <rect
                  height="4"
                  rx="1"
                  width="8"
                  x="10"
                  y="6"
                />
              </svg>
              <span
                class=""
              >
                Articles
              </span>
            </button>
            <button
              aria-checked="false"
              aria-label="Collections"
              aria-pressed="false"
              class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left items-center justify-normal text-muted-foreground hover:text-foreground/80 m-0 h-full px-0 py-1"
              data-selected="false"
              data-slot="filter-item"
              data-testid="filter-item"
              role="radio"
              tabindex="-1"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-library h-5 w-5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m16 6 4 14"
                />
                <path
                  d="M12 6v14"
                />
                <path
                  d="M8 8v12"
                />
                <path
                  d="M4 4v16"
                />
              </svg>
              <span
                class=""
              >
                Collections
              </span>
            </button>
            <button
              aria-checked="false"
              aria-label="Images"
              aria-pressed="false"
              class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left items-center justify-normal text-muted-foreground hover:text-foreground/80 m-0 h-full px-0 py-1"
              data-selected="false"
              data-slot="filter-item"
              data-testid="filter-item"
              role="radio"
              tabindex="-1"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-image h-5 w-5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  height="18"
                  rx="2"
                  ry="2"
                  width="18"
                  x="3"
                  y="3"
                />
                <circle
                  cx="9"
                  cy="9"
                  r="2"
                />
                <path
                  d="m21 15-3.086-3.086a2 2 0 0 0-2.828 0L6 21"
                />
              </svg>
              <span
                class=""
              >
                Images
              </span>
            </button>
            <button
              aria-checked="false"
              aria-label="Videos"
              aria-pressed="false"
              class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left items-center justify-normal text-muted-foreground hover:text-foreground/80 m-0 h-full px-0 py-1"
              data-selected="false"
              data-slot="filter-item"
              data-testid="filter-item"
              role="radio"
              tabindex="-1"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-circle-play h-5 w-5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M9 9.003a1 1 0 0 1 1.517-.859l4.997 2.997a1 1 0 0 1 0 1.718l-4.997 2.997A1 1 0 0 1 9 14.996z"
                />
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                />
              </svg>
              <span
                class=""
              >
                Videos
              </span>
            </button>
            <button
              aria-checked="false"
              aria-label="Links"
              aria-pressed="false"
              class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left items-center justify-normal text-muted-foreground hover:text-foreground/80 m-0 h-full px-0 py-1"
              data-selected="false"
              data-slot="filter-item"
              data-testid="filter-item"
              role="radio"
              tabindex="-1"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-link h-5 w-5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M10 13a5 5 0 0 0 7.54.54l3-3a5 5 0 0 0-7.07-7.07l-1.72 1.71"
                />
                <path
                  d="M14 11a5 5 0 0 0-7.54-.54l-3 3a5 5 0 0 0 7.07 7.07l1.71-1.71"
                />
              </svg>
              <span
                class=""
              >
                Links
              </span>
            </button>
            <button
              aria-checked="false"
              aria-label="Files"
              aria-pressed="false"
              class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left items-center justify-normal text-muted-foreground hover:text-foreground/80 m-0 h-full px-0 py-1"
              data-selected="false"
              data-slot="filter-item"
              data-testid="filter-item"
              role="radio"
              tabindex="-1"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-download h-5 w-5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 15V3"
                />
                <path
                  d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"
                />
                <path
                  d="m7 10 5 5 5-5"
                />
              </svg>
              <span
                class=""
              >
                Files
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
